# VideoCaptureOpenCV

./: .gitignore  CMakeLists.txt  README.md
VideoCaptureOpenCV/: CMakeLists.txt  VideoCaptureOpenCV.cpp  VideoCaptureOpenCV.h
